# private-ai-gateway-with-vllm-router-as-middleware

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.smoke  README.md  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  verifier-ts.yml
clients/: README.md
clients/verifier-ts/: README.md  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
clients/verifier-ts/src/: crypto.ts  digest.ts  e2ee-channel.ts  e2ee.ts  index.ts  jcs.ts  receipt.ts  report.ts  types.ts
clients/verifier-ts/test/: digest.test.ts  e2ee-channel.test.ts  e2ee.test.ts  fixtures.ts  jcs.test.ts  node-shims.d.ts  receipt.test.ts  report.test.ts  signature.test.ts
deploy/: README.md  aggregator.conf  compose.yaml  gateway.config.example.json  gateway.env.example  upstreams.example.json
docs/: attested-confidential-inference.md  attested-session-system.md  configuration-reference.md  live-e2e-test-suite.md  roadmap.md  router-middleware.md  router-mode-provider-review.md  upstream-verification-lifecycle.md
docs/providers/: README.md  audit-criteria.md
docs/providers/aci-service/: verification.md
docs/providers/chutes/: review.md  verification.md
docs/reviews/: aci-spec-conformance-gaps.md  router-mode-load-balancing-cache.md  router-mode-soundness.md
examples/: dstack_kms_root_from_report.rs  live_chutes_embedding.rs  verify_aci_artifacts.rs
examples/control-plane/: .gitignore  README.md  control.config.example.json  package-lock.json  package.json  tsconfig.json
scripts/: contract_verifier_bridge.py  dstack_os_image.py  local_multi_upstream_smoke.sh  phala_multi_upstream_smoke.sh  private_ai_provider_verifier.py  soundness_phala_direct.py  soundness_report_data.py
scripts/confidential_verifier/: VENDOR.md  sdk.py
scripts/live_e2e/: __init__.py  bfcl_v4.py  chutes_rate_probe.py  chutes_session_smoke.py  common.py  launch_aggregator.py  preflight.py  provider_verify.py  providers.glm51.json  providers.json  router_refresh_smoke.py  router_session_smoke.py  run.py  streaming_smoke.py  user_verify.py
scripts/provider_verifier/: __init__.py  chutes.py  common.py  nearai.py  phala_direct.py  tinfoil.py
spec/: README.md  aci.md  related-work.md  test-vectors.md
spec/tools/: gen-vectors.py
src/: dstack.rs  error_payload.rs  lib.rs  main.rs  sse_framing.rs  sse_protocol.rs
src/aci/: canonical.rs  e2ee.rs  identity.rs  keys.rs  mod.rs  receipt.rs  types.rs
src/aggregator/: keyset_epoch.rs  metrics.rs  mod.rs  revocation_store.rs  session.rs  session_store.rs
src/http/: mod.rs
src/middleware/: cache_index.rs  completion.rs  config.rs  control.rs  errors.rs  mod.rs  pricing.rs  request_transform.rs  response_transform.rs  router.rs  sse.rs  stream_transform.rs  types.rs
tests/: aci_service_surface.rs  aggregator_scenarios.rs  auth_and_retention.rs  canonical.rs  contract_verifier_bridge.rs  dstack_live.rs  ecdsa_recoverable.rs  entrypoint.rs  forward_binding_reverify.rs  http.rs  identity.rs  keyset_epoch.rs  keyset_revocation.rs  middleware_catalog.rs  middleware_completion.rs  phala_direct_bridge.rs  provider_e2e.rs  receipt.rs  service.rs  smoke_scripts.rs  soundness_report_data.rs  spec_vectors.rs  transform.rs  upstream_config_admin.rs  upstream_verifier.rs
tests/common/: mod.rs
tests/fixtures/: response_golden.json  stream_golden.json  transform_golden.json
(+62 files in other folders)
