[project]
name = "private-ai-gateway-live-e2e"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
  "requests>=2.32.5",
  # Runtime deps of the vendored `scripts/confidential_verifier` package, so the
  # provider-verifier bridge runs entirely from the gateway's own uv environment
  # (no sibling private-ai-verifier checkout required). See
  # scripts/confidential_verifier/VENDOR.md.
  "cryptography>=46.0.3",
  # Pinned to the 0.3.x line the vendored verifier code was validated against
  # (0.5.x changed the dcap_qvl surface; revisit as a deliberate upgrade).
  "dcap-qvl>=0.3.13,<0.4",
  "pydantic>=2.0",
  "pyyaml>=6.0.3",
  "python-dotenv>=1.0.1",
  "PyJWT>=2.10.1",
  # Tinfoil's official Python verifier. SEV-SNP/TDX attestation is verified with the
  # reference implementation (AMD VCEK->ASK->ARK signature chain + policy, Sigstore
  # code-measurement provenance, and TLS-key binding) instead of our own crypto. Used
  # by the bridge's verify_tinfoil. See docs/upstream-verification-lifecycle.md.
  "tinfoil>=0.2",
]

[tool.uv]
package = false
